Finish first pass of song search abilities. Finish tags view. Enable Memory Cache of songs in the repo layer.

--- a/appsettings.json
+++ b/appsettings.json
@@ -45,7 +45,8 @@
   },
   "AppBehavior": {
     "AccountModerationIsEnabled": false,
-    "RoleNameRequiredForCreatingSongs": null
+    "RoleNameRequiredForCreatingSongs": null,
+    "CacheSongs": true /* turn this off if you don't want caching of ALL SONGS IN MEMORY.  If you have a FAST DB or a huge collection of songs, turn it off.  */ 
   },
   "Uploads": {
     "MaxFileSizeLimitInBytes": 5242880,
