--- a/OpenSongWeb.csproj
+++ b/OpenSongWeb.csproj
@@ -3,12 +3,19 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
-    <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
-    <IsPackable>false</IsPackable>
+    <TypeScriptToolsVersion>3.5</TypeScriptToolsVersion>
+    <!--<IsPackable>false</IsPackable>-->
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ClientApp\scripts\Filters.ts" />
+    <Compile Remove="ClientApp\scripts\**" />
+    <Content Remove="ClientApp\scripts\**" />
+    <EmbeddedResource Remove="ClientApp\scripts\**" />
+    <None Remove="ClientApp\scripts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\common\types\lib\imports.d.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,37 +34,35 @@
   </ItemGroup>
 
   <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\scripts\Filters.ts" />
+    <TypeScriptCompile Include="ClientApp\common\types\lib\imports.d.ts" />
   </ItemGroup>
 
-  <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
-    <!-- Ensure Node.js is installed -->
+
+  <Target Name="Development" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug'">
+
     <Exec Command="node --version" ContinueOnError="true">
       <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
     </Exec>
-    <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js is required to build and run this project. To continue, please install Node.js from https://nodejs.org/, and then restart your command prompt or IDE." />
+    <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js isnt installed or is not on your path VAR." />
 
-    <!-- In development, the dist files won't exist on the first run or when cloning to
-         a different machine, so rebuild them if not already present. -->
-    <Message Importance="high" Text="Performing first-run Webpack build..." />
-    <Exec Command="node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js" />
-    <Exec Command="node node_modules/webpack/bin/webpack.js" />
+    <Message Condition="!Exists('node_modules')" Text="Installing packages" />
+    <Exec Condition="!Exists('node_modules')" Command="npm install --production false" />
+
+    <Exec Command="npm run build:dev" />
   </Target>
 
-  <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
-    <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
-    <Exec Command="npm install" />
-    <Exec Command="node node_modules/webpack/bin/webpack.js --config webpack.config.vendor.js --env.prod" />
-    <Exec Command="node node_modules/webpack/bin/webpack.js --env.prod" />
+  <Target Name="Production" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Release'">
 
-    <!-- Include the newly-built files in the publish output -->
-    <ItemGroup>
-      <DistFiles Include="wwwroot\dist\**" />
-      <ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
-        <RelativePath>%(DistFiles.Identity)</RelativePath>
-        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-      </ResolvedFileToPublish>
-    </ItemGroup>
+    <Exec Command="node --version" ContinueOnError="true">
+      <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
+    </Exec>
+    <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js isnt installed or is not on your path VAR." />
+
+    <Message Condition="!Exists('node_modules')" Text="Installing packages" />
+    <Exec Condition="!Exists('node_modules')" Command="npm install --production false" />
+
+    <Exec Command="npm run build:prod" />
   </Target>
-
+  
+  
 </Project>
