--- a/package.json
+++ b/package.json
@@ -1,35 +1,74 @@
 {
-  "name": "OpenSongWeb",
+  "name": "opensongweb",
   "private": true,
   "version": "0.1.0",
-  "devDependencies": {
-    "@types/jquery": "^3.3.30",
-    "@types/webpack-env": "^1.13.9",
-    "aspnet-webpack": "^2.0.3",
-    "awesome-typescript-loader": "^3.5.0",
-    "axios": "^0.19.0",
+  "scripts": {
+    "dev": "./node_modules/.bin/webpack-cli --mode development --watch --config webpack.config.js",
+    "build:dev": "./node_modules/.bin/webpack-cli --mode development --config webpack.config.js",
+    "build:prod": "./node_modules/.bin/webpack-cli --mode production --config webpack.config.js",
+    "publish": "npm install && ./node_modules/.bin/webpack-cli --mode production --config webpack.config.js && dotnet publish --configuration Release",
+    "test": "jest"
+  },
+  "dependencies": {
+    "axios": "0.18.0",
     "bootstrap": "^4.3.1",
-    "css-loader": "^0.25.0",
-    "event-source-polyfill": "^0.0.7",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
-    "file-loader": "^0.9.0",
-    "isomorphic-fetch": "^2.2.1",
+    "bootstrap-vue": "^2.0.0-rc.25",
+    "vue": "2.6.10",
+    "vue-router": "3.0.6",
+    "vuex": "3.1.1"
+  },
+  "devDependencies": {
+    "@types/jquery": "3.3.29",
+    "@types/node": "12.0.2",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "acorn": "^6.2.0",
+    "aspnet-webpack": "3.0.0",
+    "babel-core": "6.26.3",
+    "babel-jest": "23.6.0",
+    "babel-loader": "7.1.5",
+    "babel-plugin-dynamic-import-node": "2.2.0",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.2",
+    "babel-plugin-transform-export-extensions": "6.22.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-stage-2": "6.24.1",
+    "clean-webpack-plugin": "2.0.2",
+    "compression-webpack-plugin": "2.0.0",
+    "css-loader": "2.1.0",
+    "es6-promise-promise": "1.0.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
+    "file-loader": "3.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "jest": "24.8.0",
+    "jest-serializer-vue": "2.0.2",
     "jquery": "^3.4.1",
-    "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "popper.js": "^1.15.0",
-    "style-loader": "^0.13.1",
-    "typescript": "^2.9.2",
-    "url-loader": "^0.5.7",
-    "vue": "^2.6.10",
-    "vue-loader": "^11.1.4",
+    "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "resolve-url-loader": "3.1.0",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
+    "ts-loader": "6.0.1",
+    "typescript": "3.4.5",
+    "url-loader": "1.1.2",
+    "vue-class-component": "7.1.0",
+    "vue-jest": "3.0.4",
+    "vue-loader": "15.7.0",
     "vue-moment": "^4.0.0",
-    "vue-property-decorator": "^5.3.0",
-    "vue-router": "^3.0.6",
-    "vue-template-compiler": "^2.6.10",
-    "vuex": "^3.1.1",
+    "vue-property-decorator": "8.1.1",
+    "vue-style-loader": "4.1.2",
+    "vue-template-compiler": "2.6.10",
     "vuex-module-decorators": "^0.9.9",
-    "webpack": "^2.2.0",
-    "webpack-hot-middleware": "^2.25.0"
-  }
+    "webpack": "4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "3.4.1",
+    "webpack-hot-middleware": "2.25.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
