--- a/appsettings.json
+++ b/appsettings.json
@@ -46,7 +46,9 @@
   "AppBehavior": {
     "AccountModerationIsEnabled": false,
     "RoleNameRequiredForCreatingSongs": null,
-    "CacheSongs": true /* turn this off if you don't want caching of ALL SONGS IN MEMORY.  If you have a FAST DB or a huge collection of songs, turn it off.  */ 
+    "CacheSongs": true, /* turn this off if you don't want caching of ALL SONGS IN MEMORY.  If you have a FAST DB or a huge collection of songs, turn it off.  */
+    "RunMigrationsOnBoot": false, /* takes a bit... */
+    "PerformDBConfigurations":  true /* takes a bit */
   },
   "Uploads": {
     "MaxFileSizeLimitInBytes": 5242880,
