WIP: adding firebase auth.

--- a/OpenSongWeb.csproj
+++ b/OpenSongWeb.csproj
@@ -15,18 +15,22 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="clientAppConfig.ts" />
     <None Remove="ClientApp\common\types\lib\imports.d.ts" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.Firebase.Authentication" Version="2.0.1" />
     <PackageReference Include="Hangfire" Version="1.7.4" />
     <PackageReference Include="Microsoft.AspNetCore.All" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,7 +38,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientAppConfig.ts" />
     <TypeScriptCompile Include="ClientApp\common\types\lib\imports.d.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\home\components\" />
+    <Folder Include="ClientApp\home\views\" />
   </ItemGroup>
 
 
