--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     // You may need to disable the file importer as well, 
     // as Hangfire does not seem anything close to production ready for SQLite.
     "WorshipDB_SQLite": "DataSource=Worship.db",
-    "WorshipDB": "Server=(localdb)\\mssqllocaldb;Database=WorshipDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "WorshipDB": "Server=(localdb)\\mssqllocaldb;Database=WorshipDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"OpenSongWebIdentityDbContextConnection": "Worship.db"
   },
   "DataImportFolder": {
@@ -20,6 +20,8 @@
     "Success": "C:\\Temp\\DataImport\\Success",
     "Failure": "C:\\Temp\\DataImport\\Failure"
   },
+  "JWTAuthIssuer": "https://securetoken.google.com/[my-firebase-project-name]",
+  "JWTAuthAudience": "[my-firebase-project-name]",
 
   // To be put in a system-wide self-service config area?
   "CCLINumber": "1234567",
@@ -48,7 +50,7 @@
     "RoleNameRequiredForCreatingSongs": null,
     "CacheSongs": true, /* turn this off if you don't want caching of ALL SONGS IN MEMORY.  If you have a FAST DB or a huge collection of songs, turn it off.  */
     "RunMigrationsOnBoot": false, /* takes a bit... */
-    "PerformDBConfigurations":  true /* takes a bit */
+    "PerformDBConfigurations": true /* takes a bit */
   },
   "Uploads": {
     "MaxFileSizeLimitInBytes": 5242880,
