--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.25",
+    "firebase": "^6.2.4",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.1"
