--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "es6-promise-promise": "1.0.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "3.0.1",
+    "fork-ts-checker-webpack-plugin": "^1.4.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "24.8.0",
     "jest-serializer-vue": "2.0.2",
@@ -52,6 +53,8 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "ts-loader": "6.0.1",
+    "tslint": "^5.18.0",
+    "tslint-loader": "^3.5.4",
     "typescript": "3.4.5",
     "url-loader": "1.1.2",
     "vue-class-component": "7.1.0",
